attempt to fix context menu issues on ios

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-y: contain;
+  -webkit-touch-callout: none;
 }
 
 textarea {
